fixing scrollbar overflow bug in UI mobile small height  screens

--- a/jesusdev-portafolio/src/app/Pages/home/home.component.scss
+++ b/jesusdev-portafolio/src/app/Pages/home/home.component.scss
@@ -1,9 +1,15 @@
-.section{
+.contenedor{
+  display: flex;
+  flex-direction: column;
+}
+
+.contenedor > .section{
     min-height: 100vh;
+    height: fit-content;
     width: 100vw;
     max-width: 100%;
     padding: 0 !important;
-    overflow: auto;
+    //overflow: auto;
 }
 
 
