--- a/jesusdev-portafolio/src/app/components/main/main.component.scss
+++ b/jesusdev-portafolio/src/app/components/main/main.component.scss
@@ -25,7 +25,7 @@
   }
 
 .content-height{
-    height: 100vh;
+    min-height: 100vh;
 }
 
 
@@ -115,7 +115,7 @@
         left: 7%;
     }
     .custom-width{
-        padding-left: 5%;
+        margin-left: 30px;
     }
 }
 
@@ -132,7 +132,8 @@
     
     .custom-width{
         width: 545px;
-        padding-left: 5%;
+        margin-left: 35px;
+        margin-top: 50px;
     }
 
     .custom-height{
@@ -145,7 +146,7 @@
 
 @media(max-width:749px){
     .my-img{
-        width: 190px;
+        width: 50%;
         margin-right: 0px;
         margin-top: -40px;
         border-radius: 20px;
