--- a/jesusdev-portafolio/src/app/components/projects/projects.component.scss
+++ b/jesusdev-portafolio/src/app/components/projects/projects.component.scss
@@ -9,7 +9,7 @@
 //   }
 
   .custom-height{
-    height: 100vh;
+    min-height: 100vh;
   }
 
   .project-item{
