--- a/jesusdev-portafolio/src/app/shared/swipper/swipper.component.scss
+++ b/jesusdev-portafolio/src/app/shared/swipper/swipper.component.scss
@@ -6,15 +6,20 @@
       transform: translateX(-100%);
     }
   }
+
   .logos {
     overflow: hidden;
-    padding: 60px 0;
+    //padding: 60px 0;
     background: transparent;
     white-space: nowrap;
     position: relative;
     width: 100%;
+    height: 80px;
+    display: flex;
+    align-items: center;
     margin-left: -10px;
     margin-right: -10px;
+    top: 12px;
   }
 
   .logos:hover .logos-slide {
@@ -31,18 +36,16 @@
   }
 
   .logo-slide-container{
-    height: 100px;
+   // height: 100px;
     width: 100px;
   }
 
   .logos-slide img {
     height: 60px;
-    margin: 32px 30px 0 30px;
+   // margin: 32px 30px 0 30px;
+    margin: 0 30px 0 30px;
     width: 60px;
   }
-
-
-
 
   //////////
   .swiper-decoration{
@@ -58,15 +61,15 @@
   .background-hover{
     position: absolute;
     height: 80px;
-    width: 80px;
+    width: 95px;
     margin: 20px 30px 0 20px;
-    margin-left: 20px;
+    margin-left: 15px;
     visibility: hidden;
     opacity: 0;
     transition: all 0.3s linear;
     border-radius: 20px;
     background-color: var(--color-secundario);
-
+    overflow: visible !important;    
   }
 
   .hover-text{
@@ -79,7 +82,7 @@
    .logo-slide-container:hover > .background-hover{
     visibility: visible;
     opacity: .8;
-    margin-top: -70px;   
+    margin-top: -70px;  
   }
 
 
